# cloudops-ai

./: .gitignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  README.md  pyproject.toml
backend/scripts/: create_local_tables.py
backend/src/cloudops_ai/: main.py
backend/src/cloudops_ai/adapters/: __init__.py
backend/src/cloudops_ai/agents/: __init__.py  coordinator.py  cost_agent.py  deployment_agent.py  graph.py  infrastructure_agent.py  monitoring_agent.py  remediation_executor.py  security_agent.py  state.py  troubleshooting_agent.py
backend/src/cloudops_ai/api/: __init__.py  dependencies.py
backend/src/cloudops_ai/core/: __init__.py  config.py  logging.py
backend/src/cloudops_ai/domain/: __init__.py  enums.py
backend/src/cloudops_ai/repositories/: __init__.py  dynamodb_incident_repository.py  in_memory_incident_repository.py  interfaces.py
backend/src/cloudops_ai/services/: __init__.py  approval_service.py  sqs_incident_poller.py
backend/src/cloudops_ai/tools/: __init__.py  interfaces.py
backend/tests/: conftest.py
backend/tests/unit/: test_main.py
backend/tests/unit/agents/: test_coordinator.py  test_cost_agent.py  test_deployment_agent.py  test_graph.py  test_infrastructure_agent.py  test_monitoring_agent.py  test_remediation_executor.py  test_security_agent.py  test_troubleshooting_agent.py
backend/tests/unit/api/: test_auth.py  test_dependencies.py  test_incidents_router.py  test_remediation_router.py
backend/tests/unit/domain/: test_evidence.py  test_policy.py  (+3 more)
(+98 files in other folders)
