[project]
name = "cloudops-ai"
version = "0.1.0"
description = "Agentic AI Cloud Engineer: monitors AWS, diagnoses incidents, and remediates them under human-gated approval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "boto3>=1.34",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "moto>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit LocalStack/moto instead of pure in-memory objects",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cloudops_ai"]
